--- a/WorldCities/src/app/cities/cities.component.html
+++ b/WorldCities/src/app/cities/cities.component.html
@@ -4,17 +4,15 @@
 
 <p *ngIf="!cities"><em>Loading...</em></p>
 
-<mat-form-field [hidden]="!cities">
-  <input matInput #filter (keyup)="loadData(filter.value)"
-         placeholder="Filter by name (or part of it)...">
-</mat-form-field>
+<button mat-flat-button color="primary" class="btn-add" *ngIf="cities" [routerLink]="['/city']">
+  Add a new City
+</button>
 
-<table mat-table [dataSource]="cities"
-       class="mat-elevation-z8"
-       [hidden]="!cities"
-       matSort (matSortChange)="loadData()"
-       [matSortActive]="defaultSortColumn"
-       [matSortDirection]="defaultSortOrder">
+<mat-form-field [hidden]="!cities">
+  <input matInput #filter (keyup)="loadData(filter.value)" placeholder="Filter by name (or part of it)...">
+</mat-form-field>
+<table mat-table [dataSource]="cities" class="mat-elevation-z8" [hidden]="!cities" matSort (matSortChange)="loadData()"
+  [matSortActive]="defaultSortColumn" [matSortDirection]="defaultSortOrder">
 
   <!-- Id Column -->
   <ng-container matColumnDef="id">
@@ -25,7 +23,9 @@
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-    <td mat-cell *matCellDef="let city">{{city.name}}</td>
+    <td mat-cell *matCellDef="let city">
+      <a [routerLink]="['/city', city.id]">{{city.name}}</a>
+    </td>
   </ng-container>
 
   <!-- Lat Column -->
@@ -45,8 +45,5 @@
 </table>
 
 <!-- Pagination directive -->
-<mat-paginator [hidden]="!cities"
-               (page)="getData($event)"
-               [pageSize]="10"
-               [pageSizeOptions]="[10, 20, 50]"
-               showFirstLastButtons></mat-paginator>
+<mat-paginator [hidden]="!cities" (page)="getData($event)" [pageSize]="10" [pageSizeOptions]="[10, 20, 50]"
+  showFirstLastButtons></mat-paginator>
