--- a/WorldCities/src/app/cities/city-edit.component.html
+++ b/WorldCities/src/app/cities/city-edit.component.html
@@ -6,16 +6,25 @@
     <mat-form-field>
       <mat-label>Name:</mat-label>
       <input matInput formControlName="name" required placeholder="Type a name">
+      <mat-error *ngIf="form.controls['name'].errors?.['required']">
+        Name is required.
+      </mat-error>
     </mat-form-field>
     <!-- Lat -->
     <mat-form-field>
       <mat-label>Latitude:</mat-label>
       <input matInput formControlName="lat" required placeholder="Insert latitude">
+      <mat-error *ngIf="this.form.controls['lat'].errors?.['required']">
+        Latitude is required.
+      </mat-error>
     </mat-form-field>
     <!-- Lon -->
     <mat-form-field>
       <mat-label>Longitude:</mat-label>
       <input matInput formControlName="lon" required placeholder="Insert longitude">
+      <mat-error *ngIf="this.form.controls['lon'].errors?.['required']">
+        Longitude is required.
+      </mat-error>
     </mat-form-field>
     <!-- Country -->
     <mat-form-field *ngIf="countries">
@@ -25,9 +34,12 @@
           {{country.name}}
         </mat-option>
       </mat-select>
+      <mat-error *ngIf="this.form.controls['countryId'].errors?.['required']">
+        Please select a Country.
+      </mat-error>
     </mat-form-field>
     <div>
-      <button mat-flat-button color="primary" type="submit">
+      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">
         {{ this.id ? "Save" : "Create" }}
       </button>
       <button mat-flat-button color="secondary" [routerLink]="['/cities']">
