--- a/WorldCities/src/app/cities/city-edit.component.html
+++ b/WorldCities/src/app/cities/city-edit.component.html
@@ -39,7 +39,7 @@
       </mat-error>
     </mat-form-field>
     <div>
-      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid">
+      <button mat-flat-button color="primary" type="submit" [disabled]="form.invalid || form.pending">
         {{ this.id ? "Save" : "Create" }}
       </button>
       <button mat-flat-button color="secondary" [routerLink]="['/cities']">
